# TAML

./: .editorconfig  .gitignore  CONTRIBUTING.md  README.html  README.md  index.html  index.json  manifest.json  toc.html  xrefmap.yml
.github/workflows/: builds-docs.yml  dotnet-core.yml  node.js.yml  publish-nuget.yml
api-dotnet/: TAML.Parser.html  TAML.TamlArray.html  TAML.TamlDocument.html  TAML.TamlExtensionMethods.html  TAML.TamlKeyValuePair.html  TAML.TamlValue.html  TAML.html  index.html  toc.html
articles/: README.html  test_suite.html  toc.html
articles/concrete_examples/javascript/: README.html
articles/concrete_examples/yml/: README.html
articles/interpreters/: dotnet.html  javascript.html
articles/test_suite/: 1_keyvaluepairs.taml
docs/: README.md  docfx.json  index.md  toc.yml
docs/api-dotnet/: index.md
docs/articles/: README.md  test_suite.md  toc.yml
docs/articles/interpreters/: dotnet.md  javascript.md
docs/articles/test_suite/: README.md
parsers/dotnet/: Directory.Build.props  Taml.NET.sln
parsers/dotnet/Taml.NET/: Parser.cs  Taml.NET.csproj  TamlArray.cs  TamlDocument.cs  TamlExtensionMethods.cs  TamlKeyValuePair.cs  TamlValue.cs
parsers/dotnet/Test.Taml.NET/: BaseFixture.cs  Test.Taml.NET.csproj
parsers/python/: README.rst  setup.cfg
parsers/python/src/pytaml/: __init__.py  parser.py
parsers/python/tests/: test_basic.py
src/JVM/: pom.xml
src/dotnet/: Directory.Build.props  Taml.NET.sln  Taml.sln
src/javascript/: README.md  package-lock.json  package.json  tsconfig.json
test_suite/: README.md
(+147 files in other folders)
