[metadata]
name = pytaml
version = 0.0.1
description = pytaml: TAML python parser
long_description = file: README.rst
long_description_content_type = text/x-rst
url = doc.url
author = Authors
license = MIT
platforms = unix, linux, osx, cygwin, win32
classifiers =
	Development Status :: 1 - Planning
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: MacOS :: MacOS X
	Operating System :: Microsoft :: Windows
	Operating System :: POSIX
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Software Development :: Libraries
	Topic :: Utilities
keywords = taml, parser
project_urls =
	Source=https://github.com/rep
	Tracker=https://github.com/repo/issues

[options]
packages = pytaml
python_requires = >=3.5
package_dir = 
	= src
setup_requires =
	setuptools>=40.0
zip_safe = False

[options.extras_require]
testing =
	pytest
	coverage
	pytest-cov
	pytest-html
	mypy

[mypy]
files = src
pretty = True
strict = True
